--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BTG</title>
+    <ctftittle>BTG</ctftittle>
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
@@ -119,8 +119,13 @@
 
         </a>
     </div>
-
     <main>
+        <div class="ctfcontainer">
+            <div class="ctfhead">
+                <h1>CTF NEDİR?</h1>
+                <h2>SÜREÇ NASIL İŞLEYECEK?</h2>
+            </div>
+        </div>
 
     </main>
 
