--- a/ctfpart.html
+++ b/ctfpart.html
@@ -22,11 +22,30 @@
                 <div class="ctftext">
                     Lorem ipsum dolor sit amet conctfcontainertetur adipisicing elit. Officiis ex quaerat debitis ea cupiditate ipsum, illo repellat minus neque, reprehenderit aspernatur nesciunt! Sunt voluptatum soluta omnis culpa ab nam qui assumenda dolorum voluptatibus rem perferendis, cumque praesentium repellendus earum! Dolorum corporis facere distinctio alias, officia eos facilis. Hic autem, dolores, sit non sapiente officiis tempore molestiae dolorem rem veniam, recusandae voluptates dolorum. Dolore vitae suscipit vero magni nam rerum deserunt voluptas eius, repudiandae quasi aut ratione minima cumque excepturi expedita, autem sit commodi nesciunt. Amet saepe culpa numquam, laboriosam hic voluptas fugiat exercitationem ipsam dolore, labore dolorum quod, delectus blanditiis.
                 </div>
+                <!-- <div class="ctfnotice">
+                    <div><div class="ctfcircle"></div>Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
+                    <div><div class="ctfcircle"></div>Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
+                    <div><div class="ctfcircle"></div>Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
+                    <div><div class="ctfcircle"></div>Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
+                </div>-->
                 <div class="ctfnotice">
-                    <div><div class="ctfcircle"></div>Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
-                    <div><div class="ctfcircle"></div>Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
-                    <div><div class="ctfcircle"></div>Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
-                    <div><div class="ctfcircle"></div>Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
+                    <div class="vertical"></div>
+                        <div class="kare">
+                            <div class="ctfcircle"></div>
+                            <div class="textarea">Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
+                        </div>
+                        <div class="kare">
+                            <div class="ctfcircle"></div>
+                            <div class="textarea">Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
+                        </div>
+                        <div class="kare">
+                            <div class="ctfcircle"></div>
+                            <div class="textarea">Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
+                        </div>
+                        <div class="kare">
+                            <div class="ctfcircle"></div>
+                            <div class="textarea">Lorem ipsum <p>Lorem ipsum dolor sit.</p></div>
+                        </div>
                 </div>
                
             </div>
